<resources>
    <string name="app_name">SuperQuiz</string>
    <string name="welcome_to_superquiz">Welcome to SuperQuiz</string>
    <string name="whats_your_name">What\'s your name?</string>
    <string name="enter_your_name">enter your name</string>
    <string name="start">Let\'s play</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="questions">Questions?</string>
    <string name="answer_a">Answer A</string>
    <string name="answer_b">Answer B</string>
    <string name="answer_c">Answer C</string>
    <string name="answer_d">Answer D</string>
    <string name="good_answer">Good answer!</string>
    <string name="next">Next</string>
</resources>