<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue_600"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.quiz.QuizFragment">

    <TextView
        android:id="@+id/QuestionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:textSize="32sp"
        android:textAlignment="center"
        android:padding="20dp"
        android:text="@string/questions"
        />

    <Button
        android:id="@+id/AnswerA"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/answer_a"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:id="@+id/AnswerB"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/answer_b"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:id="@+id/AnswerC"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/answer_c"
        android:layout_marginBottom="20dp"
        />

    <Button
        android:id="@+id/AnswerD"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/answer_d"
        android:layout_marginBottom="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:layout_gravity="end"
        >

        <TextView
            android:id="@+id/Result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_answer"
            android:layout_gravity="bottom"
            android:textSize="32sp"
            android:maxWidth="180dp"
            android:textAlignment="center"
            android:visibility="invisible"
            />

        <Button
            android:id="@+id/Next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:minHeight="48dp"
            android:text="@string/next"
            android:layout_marginStart="20dp"
            android:visibility="invisible"
            />

    </LinearLayout>


</LinearLayout>